<resources>
    <string name="app_name">Route Builder</string>
    <string name="selectCountryButtonText">Start</string>
    <string name="selectCountryText">Select a country,\nthen select a two towns.</string>
    <string name="prevStepText">Prev Step</string>
    <string name="nextStepText">Next Step</string>
    <string name="stopText">Stop</string>
    <string name="startText">Start</string>
    <string name="noneText">None</string>
    <string name="notSelectedText">Not Selected</string>
    <string name="helpText">You need to select a country, then select two cities: the initial one is blue,\n the final one is red. Vertices can be dragged to reposition.</string>
    <string name="listOfTownsText">List of towns:</string>
    <string name="infoText">Info</string>
</resources>