<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/gray"
              android:layout_gravity="bottom"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/field"
            android:background="@color/gray"
    >
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
        />

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/image"
                android:contentDescription="@string/selectCountryText"
        />

        <TextView
                android:text="@string/selectCountryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/centerTextView"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="32sp"
                android:gravity="center"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:id="@+id/buttonsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Spinner
                android:id="@+id/selectCountrySpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/pink"
                android:theme="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
        />

        <View
                android:layout_width="1sp"
                android:layout_height="match_parent"
                android:background="@color/gray"
        />

        <Button
                android:id="@+id/previousStepButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@color/teal_200"
                android:onClick="onClickPreviousStepButton"
                android:text="@string/prevStepText"
        />

        <View
                android:layout_width="1sp"
                android:layout_height="match_parent"
                android:background="@color/gray"
        />

        <Button
                android:id="@+id/nextStepButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@color/pink"
                android:onClick="onClickNextStepButton"
                android:text="@string/nextStepText"
        />

        <View
                android:layout_width="1sp"
                android:layout_height="match_parent"
                android:background="@color/gray"
        />

        <Button
                android:id="@+id/startButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:background="@color/pink"
                android:onClick="onClickStartButton"
                android:text="@string/startText"
        />

        <View
                android:layout_width="1sp"
                android:layout_height="match_parent"
                android:background="@color/gray"
        />

        <Button
                android:id="@+id/infoButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                android:background="@color/gray"
                android:onClick="onClickInfoButton"
                android:text="@string/infoText"
        />

    </LinearLayout>

</LinearLayout>